staging/k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenn-new-checkout
  namespace: staging
  labels:
    app: greenn-new-checkout

spec:
  replicas: 1
  selector:
    matchLabels:
      app: greenn-new-checkout
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: greenn-new-checkout
    spec:
      containers:
        - name: greenn-new-checkout-container
          image: >-
            730335633389.dkr.ecr.us-east-1.amazonaws.com/stg/greenn-new-checkout:64b598c
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 60
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 20
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          imagePullPolicy: Always
      restartPolicy: Always
      nodeSelector:
        role: intel
      serviceAccountName: greenn-rbac-deploy-service-account
      serviceAccount: greenn-rbac-deploy-service-account
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: greenn-new-checkout-svc
  namespace: staging
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: greenn-new-checkout
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenn-new-checkout-ingress
  namespace: staging
  annotations:
    alb.ingress.kubernetes.io/actions.redirect: >-
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port":
      "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: >-
      arn:aws:acm:us-east-1:654654442222:certificate/a3ba3048-fa3a-4404-b14b-e95604ac65b1
    alb.ingress.kubernetes.io/group.name: greenn-stg-ext-alb
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: greenn-stg-ext-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-0d898abb6e13d8fac
    alb.ingress.kubernetes.io/subnets: subnet-0587834324eff6e09,subnet-08a69435c78edb14b
    alb.ingress.kubernetes.io/success-codes: 200-404
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - host: payfast-stg.greenn.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greenn-new-checkout-svc
                port:
                  number: 80
